90% finished, still  need to add a button that change Yes to No and vice versa

--- a/style.css
+++ b/style.css
@@ -35,3 +35,13 @@ button {
   margin-top: 200px;
   margin-bottom: 200px;
 }
+
+.ml2 {
+  font-weight: 900;
+  font-size: 3.5em;
+}
+
+.ml2 .letter {
+  display: inline-block;
+  line-height: 1em;
+}
